--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,7 +15,7 @@ build:
       - 7
 archives:
   - name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ .Arm }}"
-    format: tar.gz
+    format: tar.xz
     format_overrides:
       - goos: windows
         format: zip
